[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Levels/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/LevelSelectGrey.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/LevelSelectGold.png" type="Texture" id=3]
[ext_resource path="res://Assets/selectlevel.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Deselected",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Selected",
"speed": 5.0
} ]

[node name="LevelSelect" type="Node2D"]

script = ExtResource( 1 )

[node name="Level1" type="Node2D" parent="." index="0"]

position = Vector2( 298.234, 459.856 )
_sections_unfolded = [ "Transform" ]

[node name="Selected" type="AnimatedSprite" parent="Level1" index="0"]

scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Deselected"
_sections_unfolded = [ "Transform" ]

[node name="Level2" type="Node2D" parent="." index="1"]

position = Vector2( 618.234, 459.856 )
_sections_unfolded = [ "Transform" ]

[node name="Selected" type="AnimatedSprite" parent="Level2" index="0"]

scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Deselected"
_sections_unfolded = [ "Transform" ]

[node name="Level3" type="Node2D" parent="." index="2"]

position = Vector2( 938.234, 459.856 )
_sections_unfolded = [ "Transform" ]

[node name="Selected" type="AnimatedSprite" parent="Level3" index="0"]

scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Deselected"
_sections_unfolded = [ "Transform" ]

[node name="selectlevel" type="Sprite" parent="." index="3"]

position = Vector2( 650.995, 176.876 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]


